syntax = "proto3";


option go_package = "grpcrest/proto;user";

import "google/api/annotations.proto";

message CreateUserRequest {
    string email = 1;
    string password = 2;
    string name = 3;
    string address = 4;
}

message CreateUserResponse {
    string message = 1;
}

service CreateUserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    };
}

